--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 DASHSCOPE_API_KEY=your_api_key_here
 PROJECT_NAME="CanIMake API"
 DEBUG=true
+
+# RAG 配置（可选，有默认值）
+# EMBEDDING_MODEL=text-embedding-v2
+# CHROMA_DB_PATH=./data/chroma_db
+# RAG_TOP_K=3
+# RAG_COLLECTION_NAME=recipes
